Closed Bug 977469 Opened 11 years ago Closed 11 years ago

When USB/Wifi Tethering are both enabled, disable one of them will also disable IP forwarding

Categories

(Firefox OS Graveyard :: Wifi, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:1.3T+, b2g-v1.3 unaffected, b2g-v1.3T verified, b2g-v1.4 verified)

VERIFIED FIXED
1.4 S2 (28feb)
blocking-b2g 1.3T+
Tracking Status
b2g-v1.3 --- unaffected
b2g-v1.3T --- verified
b2g-v1.4 --- verified

People

(Reporter: dimi, Assigned: dimi)

Details

Attachments

(2 files, 1 obsolete file)

Reproduce step: 1.Enable data connection (Not necessary) 2.Enable USB tethering and Wifi Tethering 3.Disable USB or Wifi tethering 4.Check if device can connect to internet. Expect Result: Can still access internet Actual Result: Can not access internet
Attached patch Fix for bug 977469 (obsolete) — Splinter Review
Should not use \0 as delimit, use "," instead.
Attachment #8382777 - Flags: review?(vchang)
Attachment #8382777 - Attachment is obsolete: true
Attachment #8382777 - Flags: review?(vchang)
Attachment #8382784 - Flags: review?(vchang)
blocking-b2g: --- → 1.3T?
Comment on attachment 8382784 [details] [diff] [review] fix for bug 977469 v2 Review of attachment 8382784 [details] [diff] [review]: ----------------------------------------------------------------- I have verified it in Unagi. It works fine. Thank you.
Attachment #8382784 - Flags: review?(vchang) → review+
Keywords: checkin-needed
In order to avoid some conflict, lets check in in next week.
Keywords: checkin-needed
We need this patch to support wifi/usb hotspot turning on together. https://hg.mozilla.org/integration/b2g-inbound/rev/48095b783018
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → 1.4 S2 (28feb)
Dimi, does this impact 1.3 as well? if so, this should 1.3? thanks
Flags: needinfo?(dlee)
Yes, it's 1.3+ bug. Vincent, could you please check if "Bug 977469 fix for 1.3t" could be reused in 1.3.
blocking-b2g: 1.3T? → 1.3+
Flags: needinfo?(dlee) → needinfo?(vchang)
If you're happy with the v1.3 patch, please request approval-mozilla-b2g28 for uplift. Thanks!
(In reply to Ken Chang[:ken] from comment #9) > Yes, it's 1.3+ bug. > Vincent, could you please check if "Bug 977469 fix for 1.3t" could be reused > in 1.3. 1.3 branch doesn't apply rewrite net_worker to c++ patch, we don't need this in 1.3. However, we need this in 1.3T.
blocking-b2g: 1.3+ → 1.3T?
Flags: needinfo?(vchang)
Comment on attachment 8382814 [details] [diff] [review] Bug 977469 fix for 1.3t Review of attachment 8382814 [details] [diff] [review]: ----------------------------------------------------------------- I just check the patch, it works well in 1.3T branch.
Attachment #8382814 - Flags: review+
Attachment #8382814 - Flags: approval-mozilla-b2g28?
Keywords: verifyme
blocking-b2g: 1.3T? → 1.3T+
(In reply to Vincent Chang[:vchang] from comment #11) > (In reply to Ken Chang[:ken] from comment #9) > > Yes, it's 1.3+ bug. > > Vincent, could you please check if "Bug 977469 fix for 1.3t" could be reused > > in 1.3. > > 1.3 branch doesn't apply rewrite net_worker to c++ patch, we don't need this > in 1.3. > However, we need this in 1.3T. Marking 1.3 as unaffected here.
Comment on attachment 8382814 [details] [diff] [review] Bug 977469 fix for 1.3t Given this is not needed on b2g28 as 1.3 is basically unaffected, clearing the approval request here. This will be cherry-picked and landed on 1.3T as this is blocking 1.3T+ and has been fixed on central/master.
Attachment #8382814 - Flags: approval-mozilla-b2g28? → approval-mozilla-b2g28-
Following STR from Comment 0, expected result of access to the internet occurs for latest 1.3T build. Environmental Variables: Device: Tarako 1.3 MOZ BuildID: 20140501014002 Gaia: d26a776beae0070b0032248a2ce482bbe6321a6d Gecko: e90f4b655511 Version: 28.1 Firmware Version: sp6821a-gonk4.0-4-29
Following STR from Comment 0, expected result of access to the internet occurs on latest 1.4 build. Buri 1.4 MOZ BuildID: 20140527000202 Gaia: 0542778892a294d224e75af4a76be5d42938bc90 Gecko: d583ae109f54 Version: 30.0 Firmware Version: v1.2-device.cfg
According to comment #16 and comment #17, Clear Verifyme keyword.
Keywords: verifyme
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: