Bug 977469 - When USB/Wifi Tethering are both enabled, disable one of them will also disable IP forwarding. r=vchang